--- a/fr/about.html
+++ b/fr/about.html
@@ -1,9 +1,8 @@
 ---
-layout: reference
+layout: fr_reference
 ---
 <div class="box">
-  <h2>Who Did This?</h2>
-  <br/> 
-  <p>The Git Reference site was put together by the GitHub
-  team.</p>
+  <h2>Qui est à l'origine de ce site?</h2>
+  <br/>
+  <p>Le site Référence Git a été réalisé par l'équipe Github.</p>
 </div>
