--- a/fr/cookbook.html
+++ b/fr/cookbook.html
@@ -1,12 +1,12 @@
 ---
-layout: reference
+layout: fr_reference
 ---
 <div class="box">
   <h2>Git Cookbook</h2>
   <ul>
-    <li>Revert a file</li>
-    <li>Recover a lost branch</li>
-    <li>Contribute to a project on GitHub</li>
-    <li>Undo a merge</li>
+    <li>Rétablir un fichier</li>
+    <li>Récupérer une branche perdue</li>
+    <li>Contribuer à un projet sur GitHub</li>
+    <li>Annuler une fusion</li>
   </ul>
 </div>
