FR: final touches for 1st draft

--- a/fr/basic/index.html
+++ b/fr/basic/index.html
@@ -7,7 +7,7 @@ layout: fr_reference
     <span class="docs">
       <a target="new" href="http://git-scm.com/book/fr/Les-bases-de-Git-Enregistrer-des-modifications-dans-le-d%C3%A9p%C3%B4t">livre</a>
     </span>
-    Instantanés de Base
+    Bases des Instantanés
   </h2>
   <div class="block">
     <p>
@@ -992,4 +992,4 @@ Dropped stash@{1} (0b1478540189f30fef9804684673907c65865d8f)
                         </div>
                       </div>
 
-                      <p><a class="page-button next-page" href="/fr/branching">Aller à Branche et Fusion &#187;</a></p>
+                      <p><a class="page-button next-page" href="/fr/branching">Aller à Branches et Fusions &#187;</a></p>
