--- a/fr/creating/index.html
+++ b/fr/creating/index.html
@@ -142,4 +142,4 @@ config      index       <span class="blue">objects</span>
   </div>
 </div>
 
-<p><a class="page-button next-page" href="/fr/basic">Aller à Instantanés de Base &#187;</a></p>
+<p><a class="page-button next-page" href="/fr/basic">Aller à Bases des Instantanés &#187;</a></p>
