FR: Fixes reference README about

--- a/fr/about.html
+++ b/fr/about.html
@@ -2,7 +2,7 @@
 layout: fr_reference
 ---
 <div class="box">
-  <h2>Qui est à l'origine de ce site?</h2>
+  <h2>Qui est à l'origine de ce site ?</h2>
   <br/>
-  <p>Le site Référence Git a été réalisé par l'équipe Github.</p>
+  <p>Le site Référence Git a été réalisé par l'équipe GitHub.</p>
 </div>
