Delete misleading info

--- a/basic/index.html
+++ b/basic/index.html
@@ -88,9 +88,7 @@ layout: reference
     will recursively add all files under a directory you give it, if you give it
     the current working directory, it will simply start tracking every file
     there.  In this case, a <code>git add .</code> would have done the same
-    thing as a <code>git add README hello.rb</code>, or for that matter so would
-    <code>git add *</code>, but that's only because we don't have subdirectories
-    which the <code>*</code> would not recurse into.
+    thing as a <code>git add README hello.rb</code>.
     </p>
 
     <p>OK, so now if we edit one of these files and run <code>git status</code>
